--- a/app/src/main/res/layout/activity_recovery.xml
+++ b/app/src/main/res/layout/activity_recovery.xml
@@ -12,6 +12,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="@string/introduzca_su_correo"
+        android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/txt_recoverMsg"
         app:layout_constraintHorizontal_bias="0.506"
@@ -23,7 +25,8 @@
         android:layout_width="330dp"
         android:layout_height="24dp"
         android:layout_marginTop="232dp"
-        android:text="Introduzca su correo para recuperar la contraseña"
+        android:text="@string/recuperar_pass"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +37,7 @@
         android:layout_width="130dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:text="RECUPERAR"
+        android:text="@string/recuperar"
         android:onClick="recoverPass"
         app:layout_constraintEnd_toEndOf="@+id/edt_recoverMail"
         app:layout_constraintStart_toStartOf="@+id/edt_recoverMail"
