--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
         android:layout_width="210dp"
         android:layout_height="36dp"
         android:backgroundTint="@color/teal_200"
-        android:drawableLeft="@mipmap/google"
+        android:drawableStart="@mipmap/google"
         android:gravity="center"
         android:text="@string/google"
         android:textAlignment="center"
