--- a/app/src/main/res/layout/activity_add_clase.xml
+++ b/app/src/main/res/layout/activity_add_clase.xml
@@ -10,7 +10,7 @@
         android:id="@+id/edt_clasenombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="124dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
@@ -23,10 +23,12 @@
         android:id="@+id/edt_curso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Curso"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_clasenombre" />
 
@@ -34,7 +36,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="AÑADIR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_curso" />
