--- a/app/src/main/res/layout/fragment_alumnos.xml
+++ b/app/src/main/res/layout/fragment_alumnos.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bt_AddAlumno"
         android:layout_width="225dp"
         android:layout_height="41dp"
         android:text="AÑADIR ALUMNO"
