--- a/app/src/main/res/layout/activity_add_clase.xml
+++ b/app/src/main/res/layout/activity_add_clase.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".AddClaseActivity">
 
+    <Button
+        android:id="@+id/bt_volver2"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:text="VOLVER"
+        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
     <EditText
         android:id="@+id/edt_clasenombre"
         android:layout_width="wrap_content"
@@ -36,8 +45,22 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AÑADIR"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="AÑADIR CLASE"
+        app:layout_constraintEnd_toEndOf="@+id/edt_curso"
+        app:layout_constraintStart_toStartOf="@+id/edt_curso"
         app:layout_constraintTop_toBottomOf="@+id/edt_curso" />
+
+    <TextView
+        android:id="@+id/txt_errorAddClase"
+        android:layout_width="wrap_content"
+        android:layout_height="53dp"
+        android:layout_marginBottom="364dp"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
+        android:textColor="@color/error"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_volver2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
