--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,7 +73,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:textAlignment="center"
-        android:textColor="#FF0202"
+        android:textColor="@color/error"
         app:layout_constraintBottom_toTopOf="@+id/regSignup"
         app:layout_constraintEnd_toEndOf="@+id/regSignup"
         app:layout_constraintHorizontal_bias="0.511"
