--- a/app/src/main/res/layout/fragment_clases.xml
+++ b/app/src/main/res/layout/fragment_clases.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.clases.ClasesFragment">
@@ -10,11 +9,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_misclases"
-        android:layout_width="0dp"
-        android:layout_height="570dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/bt_AddClass"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -24,7 +24,9 @@
         android:id="@+id/bt_AddClass"
         android:layout_width="225dp"
         android:layout_height="41dp"
+        android:layout_marginBottom="28dp"
         android:text="AÑADIR CLASE"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
