--- a/app/src/main/res/layout/item_rv_alumno.xml
+++ b/app/src/main/res/layout/item_rv_alumno.xml
@@ -30,6 +30,13 @@
             android:hint="Apellidos"
             android:paddingStart="5dp" />
 
+        <TextView
+            android:id="@+id/txt_apellidosA2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Apellido2"
+            android:paddingStart="5dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
