--- a/app/src/main/res/layout/activity_alumno_detalle.xml
+++ b/app/src/main/res/layout/activity_alumno_detalle.xml
@@ -22,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="@+id/img_alumnoDetalle"
-        app:layout_constraintStart_toStartOf="@+id/img_alumnoDetalle"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/img_alumnoDetalle" />
 
     <TextView
@@ -39,9 +40,9 @@
         android:id="@+id/txt_puntosDetalle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@+id/txt_apellidosDetalle"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txt_apellidosDetalle"
         app:layout_constraintTop_toBottomOf="@+id/txt_apellidosDetalle" />
 
@@ -65,4 +66,57 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img_alumnoDetalle"
         app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:text="Nombre: "
+        app:layout_constraintBottom_toBottomOf="@+id/txt_nombreDetalle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txt_nombreDetalle"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apellidos: "
+        app:layout_constraintBottom_toBottomOf="@+id/txt_apellidosDetalle"
+        app:layout_constraintEnd_toStartOf="@+id/txt_apellidosDetalle"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/txt_apellidosDetalle"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Puntos: "
+        app:layout_constraintBottom_toBottomOf="@+id/txt_puntosDetalle"
+        app:layout_constraintEnd_toStartOf="@+id/txt_puntosDetalle"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/txt_puntosDetalle" />
+
+    <TextView
+        android:id="@+id/txt_codigoDetalle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/txt_puntosDetalle"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txt_puntosDetalle"
+        app:layout_constraintTop_toBottomOf="@+id/txt_puntosDetalle" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CÓDIGO: "
+        app:layout_constraintBottom_toBottomOf="@+id/txt_codigoDetalle"
+        app:layout_constraintEnd_toStartOf="@+id/txt_codigoDetalle"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/txt_codigoDetalle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
