--- a/app/src/main/res/layout/item_rv_alumno.xml
+++ b/app/src/main/res/layout/item_rv_alumno.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_Alumno"
             android:layout_width="108dp"
             android:layout_height="93dp"
