--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,5 +20,10 @@
         android:name="com.mariosg92.yourclassapp.ui.alumnos.AlumnosFragment"
         android:label="Mis Alumnos"
         tools:layout="@layout/fragment_alumnos" />
+    <fragment
+        android:id="@+id/nav_ranking"
+        android:name="com.mariosg92.yourclassapp.ui.ranking.RankingFragment"
+        android:label="@string/ranking"
+        tools:layout="@layout/fragment_ranking" />
 
 </navigation>
